--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,13 @@
   position: relative;
   z-index: 99;
 }
+.overheader .bg {
+  height: inherit;
+  width: auto;
+  background-color: rgba(51, 51, 51, 0.15);
+  position: absolute;
+  top: 0;
+}
 .overheader * {
   color: #fff;
 }
