--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -22,10 +22,11 @@ $fontmono: 'Roboto Mono', monospace;
 	z-index: 99;
 	& .bg{
 		height: inherit;
-		width: auto;
-		background-color: rgba(51, 51, 51, .15);
+		width: 100%;
+		background-color: rgba(51, 51, 51, .2);
 		position: absolute;
     	top: 0;
+    	z-index: 3;
 	}
 	& *{
 		color: #fff;
