--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,11 @@
 }
 .overheader .bg {
   height: inherit;
-  width: auto;
-  background-color: rgba(51, 51, 51, 0.15);
+  width: 100%;
+  background-color: rgba(51, 51, 51, 0.2);
   position: absolute;
   top: 0;
+  z-index: 3;
 }
 .overheader * {
   color: #fff;
